      than inside another dockable.
  - Added a second docking sample demonstrating containers
  - Added save/restore dock layout to docking samples
  - Added Close All Dockables and Default Dock Layout to docking samples
* Added Region support to CDC class.
* Notepad sample enhancements:
  - Now capable of handling Unicode text
 
All Changes
-----------
Added CContainer class
Added CTabPage class  (a nested class of CContainer)
Added CTargetBottom   (a nested class of CDockable)
Added CTargetCentre   (a nested class of CDockable)
Added CTargetLeft     (a nested class of CDockable)
Added CTargetRight    (a nested class of CDockable)
Added CTargetTop      (a nested class of CDockable)
Added CDialog::SetDlgParent
Added CDC::CreateEllipticRegion
Added CDC::CreateEllipticRegionIndirect
Added CDC::CreatePolygonRgn
Added CDC::CreatePolyPolygonRgn
Added CDC::CreateRectRgn
Added CDC::CreateRectRgnIndirect
Added CDC::DetachRegion
Added CDC::ExtCreateRegion
Added CFrame::AddToolbarButton
Added CWnd::CheckDlgButton
Added CWnd::GetDlgItem
Added CWnd::GetParent
Added CWnd::IsContainer
Added CWnd::IsDockable
Added CWnd::LockWindowUpdate
Added CWnd::SendDlgItemMessage
Added CWnd::SetDlgItemText
Added CToolbar::SetButtonWidth (useful for adding a ComboBox to a toolbar)
Added CToolbar::SetImages
Added CMDIFrame::SetActiveMDIChild 
Changed CMDIFrame::GetActiveMDIChild (it now returns a CWnd* instead of a HWND)
Removed CMDIFrame::GetActiveMDIChildCWnd
Renamed CMDIFrame::GetMDIChildVect to CMDIFrame::GetAllMDIChildren
Removed CWnd::m_hWndParent

Added the following docking styles:
DS_DOCKED_CONTAINER	
DS_DOCKED_LEFTMOST  
DS_DOCKED_RIGHTMOST 
DS_DOCKED_TOPMOST	
DS_DOCKED_BOTTOMMOST

Subclassed windows now call OnCommand and OnNotify
Exceptions now also genereate TRACE output to display the error.

Fixes
-----
Various fixes to docking, including:
 - Fixed Z order of undocked windows
 - Fixed focus for child windows
 - Added Win98 and WinME support for docking
 - Improved undocking