@@ -50,7 +50,7 @@ CViewList::~CViewList()
 void CViewList::OnInitialUpdate()
 {
 	// Set the image lists
-	m_himlSmall = ImageList_Create(16, 15, ILC_COLORDDB | ILC_MASK, 1, 0);
+	m_himlSmall = ImageList_Create(16, 15, ILC_COLOR32 | ILC_MASK, 1, 0);
 	m_hbmImage = LoadBitmap(MAKEINTRESOURCE(IDB_FILEVIEW));
 	ImageList_AddMasked(m_himlSmall, m_hbmImage, RGB(255, 0, 255));
 	SetImageList(m_himlSmall, LVSIL_SMALL);
@@ -140,7 +140,7 @@ CViewTree::~CViewTree()
 void CViewTree::OnInitialUpdate()
 {
 	//set the image lists
-	m_himlNormal = ImageList_Create(16, 15, ILC_COLORDDB | ILC_MASK, 1, 0);
+	m_himlNormal = ImageList_Create(16, 15, ILC_COLOR32 | ILC_MASK, 1, 0);
 	m_hbmImage = LoadBitmap(MAKEINTRESOURCE(IDB_CLASSVIEW));
 	ImageList_AddMasked(m_himlNormal, m_hbmImage, RGB(255, 0, 0));
 	SetImageList(m_himlNormal, LVSIL_NORMAL);
