@@ -17,6 +17,7 @@ CMainFrame::CMainFrame()
 	// Set the Resource IDs for the toolbar buttons
 	AddToolbarButton( IDM_FILE_NEW   );
 	AddToolbarButton( IDM_FILE_OPEN  );
+	AddToolbarButton( 0 );				// Separator
 	AddToolbarButton( IDM_FILE_SAVE  );
 	AddToolbarButton( 0 );				// Separator
 	AddToolbarButton( IDM_EDIT_CUT   );
@@ -35,6 +36,35 @@ CMainFrame::CMainFrame()
 CMainFrame::~CMainFrame()
 {
 	// Destructor for CMainFrame.
+}
+
+void CMainFrame::AddCombo()
+{
+	int nComboWidth = 120; 
+	CToolbar& TB = GetToolbar(); 
+	 
+	// Adjust button width and convert to separator   
+	TB.SetButtonStyle(IDM_FILE_SAVE, TBSTYLE_SEP);
+	TB.SetButtonWidth(IDM_FILE_SAVE, nComboWidth);
+	 
+	// Determine the size and position of the ComboBox 
+	int nIndex = TB.CommandToIndex(IDM_FILE_SAVE); 
+	CRect rect = TB.GetItemRect(nIndex); 
+	 
+	// Create the ComboboxEx window 
+	m_ComboBoxEx.Create(TB.GetHwnd());
+	m_ComboBoxEx.SetWindowPos(NULL, rect, SWP_NOACTIVATE);
+
+	// Set ComboBox Height
+	m_ComboBoxEx.SendMessage(CB_SETITEMHEIGHT, (WPARAM)-1, (LPARAM)rect.Height()-6);
+
+	// Resize rebar band
+	CRebar& RB = GetRebar();
+	int iBand = RB.GetBand(TB.GetHwnd());
+	RB.ResizeBand(iBand, TB.GetMaxSize());
+
+	m_ComboBoxEx.AddItems();
+	RecalcLayout();
 }
 
 BOOL CMainFrame::OnCommand(WPARAM wParam, LPARAM /*lParam*/)
@@ -131,6 +161,8 @@ void CMainFrame::OnCreate()
 		AddToolbarBand(Cards);
 		iButtons = Cards.SetButtons(CardsData);
 		SetToolbarImages(Cards, iButtons, RGB(255,0,255), IDB_CARDS, 0, 0);
+
+	
 	}
 }
 
@@ -140,6 +172,7 @@ void CMainFrame::OnInitialUpdate()
 	// Place any additional startup code here.
 
 	TRACE("Frame created\n");
+	AddCombo();
 }
 
 LRESULT CMainFrame::OnNotify(WPARAM /*wParam*/, LPARAM /*lParam*/)
