@@ -14,6 +14,7 @@ Major Changes
 * Added Region support to CDC class.
 * Notepad sample enhancements:
   - Now capable of handling Unicode text
+* Themes sample now demonstrates a ComboBoxEx control in its toolbar  
  
 All Changes
 -----------
